# fsr-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  header.h  release.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  rustdoc-pages.yml
fsr/: Cargo.toml
fsr-sys/: Cargo.toml
fsr-sys/FidelityFX-FSR2/shader_permutations/dx12/: ffx_fsr2_accumulate_pass_0ac651e27aac67fe9891547291aacaa8.h  ffx_fsr2_accumulate_pass_16bit_0eadfd571fc73b1dc95947bab21444ef.h  ffx_fsr2_accumulate_pass_16bit_3f6ee01ab4cce7bc72c2b04c0d67a467.h  ffx_fsr2_accumulate_pass_16bit_4886859fec4ba89425528a5bfad184c9.h  ffx_fsr2_accumulate_pass_16bit_4d62106f63e27a726c190c1eefe142fb.h  ffx_fsr2_accumulate_pass_16bit_64228bde02ac2c97b57adfb8c5599d45.h  ffx_fsr2_accumulate_pass_16bit_7795ffd60816d4852d2d5f692266e489.h  ffx_fsr2_accumulate_pass_16bit_89afe9e281c043ec4eda33a66e78154e.h  ffx_fsr2_accumulate_pass_16bit_9ba080947535fffb8492b9f98d7736cd.h  ffx_fsr2_accumulate_pass_16bit_a01c48f9202de9099fa842d6511a7b3b.h  ffx_fsr2_accumulate_pass_16bit_a207b5df2510d3665e2a343a260a7b66.h  ffx_fsr2_accumulate_pass_16bit_cd83db26feae0c50e43a88ab43778f8c.h  ffx_fsr2_accumulate_pass_16bit_cf591ff736e4e7a60b23b98e4ff70051.h  ffx_fsr2_accumulate_pass_16bit_d235c04fba89c8f768e8af41b635ab4f.h  ffx_fsr2_accumulate_pass_1e307586083b7c810274dcfddc20ed9d.h  ffx_fsr2_accumulate_pass_399d46a811f6902450dcc45cf4ee340f.h  ffx_fsr2_accumulate_pass_48d1f7336e4392f45c19e4b7849a5da0.h  ffx_fsr2_accumulate_pass_5c0125d3fe6cdf5af61e439d3df1fad2.h  ffx_fsr2_accumulate_pass_6aef00af2765a370e2178412fc358f44.h  ffx_fsr2_accumulate_pass_71ca4ea55940cab8a820481960c8a3e4.h  ffx_fsr2_accumulate_pass_90a388e563115390dc148838536a9cad.h  ffx_fsr2_accumulate_pass_a6c5892ed59fb8e65ddd74f4e01bac1f.h  ffx_fsr2_accumulate_pass_aedf67bb4c493a4e59a368f880ad025f.h  ffx_fsr2_accumulate_pass_b0f8c351e5603547b32bf22af6200dfb.h  ffx_fsr2_accumulate_pass_c62f73555246021109938fac6a41d35f.h  ffx_fsr2_accumulate_pass_d7361fa8e0deae634b3ab28b530fa955.h  ffx_fsr2_accumulate_pass_f1720da1351acd98e463bdf9eca1d9eb.h  ffx_fsr2_accumulate_pass_fa2a638eeedf5ee48e6a76650208394c.h  ffx_fsr2_accumulate_pass_wave64_16bit_125c74f4ca61df19fa839e983f8bcfee.h  ffx_fsr2_accumulate_pass_wave64_16bit_18c696cf9b0c26f589ef96d5abd9cb98.h  ffx_fsr2_accumulate_pass_wave64_16bit_3a4d256f9389af142ee8e298c47ed9e4.h  ffx_fsr2_accumulate_pass_wave64_16bit_502b87594d4d8e3366e525f8bf6714dd.h  ffx_fsr2_accumulate_pass_wave64_16bit_6789d0f0abbed47f63e1f50ffc2e946e.h  ffx_fsr2_accumulate_pass_wave64_16bit_a4dfb046493ebd4fd111c6fa731570c6.h  ffx_fsr2_accumulate_pass_wave64_16bit_a993789e33b4aff974645e7a5c28cf47.h  ffx_fsr2_accumulate_pass_wave64_16bit_c026145ccb43c43a793bd2f1ece0f679.h  ffx_fsr2_accumulate_pass_wave64_16bit_f25d195bcdfe24ce4a29ecd12d2c7cc3.h  ffx_fsr2_accumulate_pass_wave64_16bit_feb8aaa8c1a8769475a963d15dd7a41b.h  ffx_fsr2_accumulate_pass_wave64_16bit_permutations.h  ffx_fsr2_accumulate_pass_wave64_245230b3665b7bc6149adbe0ce65afa3.h  (+16 more)
fsr-sys/FidelityFX-FSR2/shader_permutations/vk/: ffx_fsr2_accumulate_pass_permutations.h  ffx_fsr2_reconstruct_previous_depth_pass_permutations.h
fsr-sys/FidelityFX-FSR2/src/ffx-fsr2-api/: ffx_assert.cpp  ffx_fsr2.cpp  ffx_fsr2.h  ffx_fsr2_interface.h  ffx_types.h
fsr-sys/FidelityFX-FSR2/src/ffx-fsr2-api/dx12/shaders/: ffx_fsr2_shaders_dx12.h
fsr-sys/FidelityFX-FSR2/src/ffx-fsr2-api/vk/: ffx_fsr2_vk.cpp
fsr-sys/FidelityFX-FSR2/src/ffx-fsr2-api/vk/shaders/: ffx_fsr2_shaders_vk.h
fsr-sys/src/: bindings.rs  d3d12_bindings.rs  lib.rs  vk_bindings.rs
fsr-sys/tests/: link.rs
fsr/src/: d3d12.rs  interface.rs  lib.rs  vk.rs
fsr2/: Cargo.toml
fsr2-sys/: Cargo.toml
fsr2-sys/src/: lib.rs
fsr2/src/: d3d12.rs  lib.rs  vk.rs
shader_permutations/vk/: ffx_fsr2_reconstruct_previous_depth_pass_permutations.h
src/: lib.rs
(+63 files in other folders)
