[package]
name = "fsr-sys"
description = "Raw FidelityFX Super Resolution 2 bindings for rust."
version = "0.1.9"
edition = "2021"
build = "build/build.rs"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT"
repository = "https://github.com/EmbarkStudios/fsr-rs"

[dependencies]
ash = { version = "0.38", features = ["linked"], optional = true }
# d3d12 = { version = "0.19.0", optional = true }

[dev-dependencies]
fsr-sys = { path = ".", features = ["generate-bindings", "vulkan", "d3d12"] }

[build-dependencies]
bindgen = { version = "0.69", optional = true }
cmake = "0.1"
fs_extra = "1.2"
regex = "1"

[features]
vulkan = ["dep:ash"]
d3d12 = [
    # "dep:d3d12"
]
generate-bindings = ["dep:bindgen"]
