[package]
name = "fsr-sys"
description = "Raw FidelityFX Super Resolution 2 bindings for rust."
version = "0.1.11"
edition = "2021"
build = "build/build.rs"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT"
repository = "https://github.com/EmbarkStudios/fsr-rs"

[dependencies]

[dev-dependencies]

[build-dependencies]
bindgen = { version = "0.69", optional = true }
cmake = "0.1"
fs_extra = "1.2"
regex = "1"

[features]
vulkan = []
d3d12 = []
generate-bindings = ["dep:bindgen"]
