[package]
name = "fsr"
description = "FidelityFX Super Resolution 2 bindings for rust."
version = "0.1.8"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT"
repository = "https://github.com/EmbarkStudios/fsr-rs"

[dependencies]
widestring = "1.0"
bitflags = "2.4"
thiserror = "1.0"
fsr-sys = { version = "0.1.8", path = "../fsr-sys", default-features = false }

[dependencies.ash]
version = "0.37"
optional = true

[dependencies.windows]
version = "0.51"
optional = true
features = [
    "Win32_Graphics_Direct3D12"
]

[features]
default = []
vulkan = ["fsr-sys/vulkan", "dep:ash"]
d3d12 = ["fsr-sys/d3d12", "dep:windows"]

