[package]
name = "fsr2-sys"
description = "Raw FidelityFX Super Resolution 2 bindings for rust."
version = "0.1.0"
edition = "2021"
build = "build/build.rs"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT"
repository = "https://github.com/EmbarkStudios/fsr2"

[build-dependencies]
bindgen = { version = "0.65" }
cc = "1.0"
glob = "0.3"

[features]
vulkan = []
d3d12 = []
