[package]
name = "fsr2"
description = "FidelityFX Super Resolution 2 bindings for rust."
version = "0.1.0"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT"
repository = "https://github.com/EmbarkStudios/fsr2"

[dependencies]
ash = "0.37"
widestring = "1.0"
bitflags = "1.3"
fsr2-sys = { path = "../fsr2-sys" }